--- a/Generator/package.json
+++ b/Generator/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "cluster": "^0.7.7",
     "ethereumjs-util": "^6.1.0",
-    "http": "0.0.0",
+    "ora": "^3.1.0",
     "yargs": "^13.2.0"
   }
 }
