--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethereumjs-util": "^6.1.0",
+    "ethers": "^4.0.36",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^2.1.8",
