--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^2.1.8",
-    "react-transition-group": "^2.9.0",
-    "uuid": "^3.3.2",
-    "web3": "^1.0.0-beta.55"
+    "react-transition-group": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
