--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Vanity Address Generator",
   "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "cd client; yarn; cd ..",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "cd client; yarn start; cd ..",
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "dev-update": "yarn upgrade; cd client; yarn upgrade; cd ..",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
